<resources>
    <string name="app_name">PetPals</string>
    <string name="petlove">PetPals</string>
    <string name="welcome_emily">Welcome, Emily!</string>
    <string name="our_logo">Our Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_and_account">Create and account</string>
</resources>